added some nice stuff

--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,6 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif;
-
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                    supported by Chrome, Edge, Opera and Firefox */
 }
 
 .buttonContainer {
@@ -77,4 +67,8 @@ p {
 
 #footerText img {
   width: 1.5rem;
+}
+
+.card {
+  margin-bottom: 10px;
 }
